# ai_mask_prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  pyproject.toml
scripts/: convert-pth-to-ggml.py  demo.py
src/: CMakeLists.txt  cli.c  cli.cpp  gui.c  sam-c.cpp  sam-c.h  sam-config.c  sam-config.h  sam-gui.c  sam-gui.h  sam.cpp  sam.h
