[tool.poetry]
name = "ai-mask-prototype"
version = "0.1.0"
description = "AI mask prototype using Meta's [Segment Anything Model](https://github.com/facebookresearch/segment-anything/)"
authors = ["Andrii Ryzhkov"]
license = "GPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.5.1", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1", source = "pytorch_cpu"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
